--- a/references.bib
+++ b/references.bib
@@ -1477,6 +1477,15 @@ title = {{High-quality continuous random networks}},
 volume = {62},
 year = {2000}
 }
+@article{Woodcock1976,
+author = {Woodcock, L V},
+file = {:Users/David/Documents/Work/DPhil/Papers/f29767201667.pdf:pdf},
+journal = {J Chem Soc Faraday Trans 2},
+pages = {1667--1672},
+title = {{Glass Transition in the Hard-Sphere Model}},
+volume = {72},
+year = {1976}
+}
 @article{Anderson1973,
 author = {Anderson, P W},
 file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0025540873901670-main.pdf:pdf},
