--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -45,17 +45,20 @@
 \newcommand{\bd}[2]{\left(#1,#2\right)}
 
 % Vectors
+\newcommand{\vrc}[1]{\mathbf{r}^{\left(#1\right)}}
+\newcommand{\vrp}[1]{\mathbf{r}_{#1}}
+
 \newcommand{\vr}{\mathbf{r}}
-\newcommand{\vri}{\mathbf{r_i}}
-\newcommand{\vrj}{\mathbf{r_j}}
-\newcommand{\vrk}{\mathbf{r_k}}
-\newcommand{\vrij}{\mathbf{r_{ij}}}
-\newcommand{\vrik}{\mathbf{r_{ik}}}
-\newcommand{\vhrij}{\boldsymbol{\hat{\mathbf{r}}_{\mathbf{ij}}}}
-\newcommand{\vhrik}{\boldsymbol{\hat{\mathbf{r}}_{\mathbf{ik}}}}
-\newcommand{\vfi}{\mathbf{F_i}}
-\newcommand{\vfj}{\mathbf{F_j}}
-\newcommand{\vfk}{\mathbf{F_k}}
+\newcommand{\vri}{\mathbf{r}_i}
+\newcommand{\vrj}{\mathbf{r}_j}
+\newcommand{\vrk}{\mathbf{r}_k}
+\newcommand{\vrij}{\mathbf{r}_{ij}}
+\newcommand{\vrik}{\mathbf{r}_{ik}}
+\newcommand{\vhrij}{\boldsymbol{\hat{\mathbf{r}}}_{ij}}
+\newcommand{\vhrik}{\boldsymbol{\hat{\mathbf{r}}}_{ik}}
+\newcommand{\vfi}{\mathbf{F}_i}
+\newcommand{\vfj}{\mathbf{F}_j}
+\newcommand{\vfk}{\mathbf{F}_k}
 
 % Voronoi
 \newcommand{\ed}{\langle r^\prime \rangle_z}
