--- a/text/bilayers.tex
+++ b/text/bilayers.tex
@@ -2,10 +2,10 @@
 \label{ch:bilayers}
 
 \begin{chapterabstract}
-A computationally tractable \mc{} method using triangle rafts is developed to generate configurations for bilayers of \sioii{} and related materials.
+A computationally tractable \mc{} method using triangle rafts is developed to generate bilayers of \sioii{} and related materials.
 The method allows defect free networks of any given shape to be grown with both tuneable ring statistics and topologies, controlled by a combination of the choice of the ``allowed'' rings and the effective growth ``temperature''. 
-Configurations are generated with \aw{} parameters commensurate with those obtained from an analysis of experimental configurations, improving significantly on previous methods for generating these networks (which systematically underestimate this parameter). 
-The ability to efficiently grow configurations allows exploration of the structural basis of \lm’s law, where the commonly observed value of $p_6\approx0.4$ is presented as a balance between entropic and enthalpic contributions to the free energy. 
+Configurations are generated with \aw{} parameters commensurate with those obtained from an analysis of experimental configurations, improving significantly on previous methods.
+The ability to efficiently grow configurations allows exploration of the structural basis of \lm’s law, where the commonly observed value of $p_6\approx0.4$ is presented as a balance between entropic and enthalpic factors. 
 The deviations of ring areas from the ideal values are discussed and the relative insensitivity of the ring area to relatively strong distortions is highlighted.
 \end{chapterabstract}
 
@@ -23,11 +23,12 @@ The ring structure then emerges from the three\--coordinate network formed by co
 Indeed, scanning tunnelling microscopy (STM) has been used to directly visualise the ring structure in silica bilayers, revealing both crystalline and glassy arrangements and even the interface between the two   \cite{Loffler2010,Lichtenstein2012b}.
 
 More recently experimentalists have also succeeded in synthesising bilayers of germania, \geoii{} \cite{Lewandowski2018,Lewandowski2019}.
-These have the same fundamental structure as \sioii{}, but with more distorted tetrahedra \davidnote{Why again...some inorganic stuff...}.
-This can lead to a build up of strain and rumpling of the tetrahedral layers.
-\marknote{Have you discussed somewhere why they are doing this? Control of the pore size and pote
-density critical for gas separation applications....}
-\marknote{Note somewhere that making the GeO2 analogue is more difficult experimentally.....}
+\davidnote{Add a bit more experimental context here, discuss with Mark}
+%These have the same fundamental structure as \sioii{}, but with more distorted tetrahedra \davidnote{Why again...some inorganic stuff...}.
+%This can lead to a build up of strain and rumpling of the tetrahedral layers.
+%\marknote{Have you discussed somewhere why they are doing this? Control of the pore size and pote
+%density critical for gas separation applications....}
+%\marknote{Note somewhere that making the GeO2 analogue is more difficult experimentally.....}
 
 \begin{figure}[bt]
      \centering
@@ -569,7 +570,7 @@ This suggests that the ring area is not the most suitable metric for quantifying
 As previously stated, although the potential model used is physically motivated, it is lightweight in order to facilitate generation of a large number of configurations with the correct network topology. 
 In future it would be informative to see if the required regularity can be achieved by geometry optimising the resulting bilayer configurations with a more accurate potential, such as the TS potential which includes potentially significant electrostatic interactions including many-body polarisation effects \cite{Tangney2002}.
 
-\section{Chapter Summary}
+\section{Chapter Conclusions}
 
 In this chapter a method for the effective growth of \td{} networks from a given seed has been developed, allowing for control over the ring size distributions and the system topologies. 
 The latter is often characterised by the Aboav-Weaire parameter, $\alpha$, and
