--- a/text/general_networks.tex
+++ b/text/general_networks.tex
@@ -277,6 +277,7 @@ and equations \eqref{con:as2}\--\eqref{con:as4}.
 This can again be solved numerically, and the resulting distribution can be related to a single node degree probability (\eg{} $p_6$) and an assortativity value.
 
 \section{Generalised Bond Switching Algorithm}
+\label{s:genbondswitching}
 
 In order to study generic physical networks, a simulation method is required which can generate configurations across a wide range of coordination environments, topologies and potential models. 
 The bond switching algorithm, introduced in section \ref{s:bondswitch}, is a good candidate as it has proved effective for studying atomic networks in chapter \ref{ch:targetedopt}.
@@ -512,6 +513,7 @@ In this chapter data on networks will be presented from a range of different sou
 These are detailed here as a reference for the remainder of the chapter.
 
 \subsection{Computational Networks}
+\label{s:gennetcompsamples}
 
 All networks derived from computation were calculated using methods described in this thesis.
 They are as follows:
@@ -806,7 +808,7 @@ Although this is a simple consequence of the mechanical properties of the system
      \label{fig:fullerene92}
 \end{figure}
 
-\section{Chapter Summary}
+\section{Chapter Conclusions}
 
 In summary, this chapter has thoroughly examined the network properties of a wide range of naturally occurring \td{} systems; spanning varying coordination environments, potential models and topologies.
 Data has been collected from a range of experimental sources, and have the theoretical bond switching method has been further developed to aid the study of these diverse systems computationally.
