--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -138,24 +138,34 @@ This thesis aims to incorporate all of these aspects, designing models and algor
 
 The structure of this thesis is as follows:
 \davidnote{Todo: thesis structure}
-\begin{itemize}
-	\item \bf{Chapter 2}:
-	
-	\item \bf{Chapter 3}:
-	
-	\item \bf{Chapter 4}:
-	
-	\item \bf{Chapter 5}:
-	
-	\item \bf{Chapter 6}:
-	
-	\item \bf{Chapter 7}:
-	
-	\item \bf{Chapter 8}:
+\davidnote{Just basically a repeat of abstracts?}
+\davidnote{Actually can this section just go?}
 
-	\item \bf{Chapter 9}:
+\begin{itemize}
+	\item \textbf{Chapter 2}: the theory underpinning complex networks is discussed, covering the representation of atomic systems as networks and the relationship of the dual network to ring structure.
+The laws which govern the topological properties of physical networks are also introduced, namely Euler's law, \lm's law and the \aw{} law.
+
+	\item \textbf{Chapter 3}: the theoretical basis of \mc{} methods and their application to generating realisations of \td{} networks is reviewed.
+There is a broad discussion of Metropolis \mc{} methods, before specific methods are covered in detail; namely the bond switching algorithm and hard particle \mc{} in conjunction with the Voronoi construction.
+This discussion lays the groundwork for the extension of these methods and development of additional \mc{} algorithms in subsequent chapters.
 	
-	\item \bf{Chapter 10}:
+	\item \textbf{Chapter 4}: a computationally tractable \mc{} method using triangle rafts is developed to generate bilayers of \sioii{} and related materials.
+The method allows defect free networks of any given shape to be grown with both tuneable ring statistics and topologies, controlled by a combination of the choice of the ``allowed'' rings and the effective growth ``temperature''. 
+Configurations are generated with \aw{} parameters commensurate with those obtained from an analysis of experimental configurations, improving significantly on previous methods.
+The ability to efficiently grow configurations allows exploration of the structural basis of \lm’s law, where the commonly observed value of $p_6\approx0.4$ is presented as a balance between entropic and enthalpic factors. 
+The deviations of ring areas from the ideal values are discussed and the relative insensitivity of the ring area to relatively strong distortions is highlighted.
+	
+	\item \textbf{Chapter 5}:
+	
+	\item \textbf{Chapter 6}:
+	
+	\item \textbf{Chapter 7}:
+	
+	\item \textbf{Chapter 8}:
+
+	\item \textbf{Chapter 9}:
+	
+	\item \textbf{Chapter 10}:
 \end{itemize}
 	
  
