--- a/thesis.tex
+++ b/thesis.tex
@@ -203,16 +203,16 @@
 %%%%% CHAPTERS
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
-%\include{text/introduction}
+\include{text/introduction}
 \include{text/theory}
-%\include{text/methods}
-%\include{text/bilayers}
-%\include{text/targeted_opt}
-%\include{text/general_networks}
-%\include{text/quasi2d}
-%\include{text/procrystals}
-%\include{text/ph}
-%\include{text/conclusions}
+\include{text/methods}
+\include{text/bilayers}
+\include{text/targeted_opt}
+\include{text/general_networks}
+\include{text/quasi2d}
+\include{text/procrystals}
+\include{text/ph}
+\include{text/conclusions}
 
 %% APPENDICES %% 
 % Starts lettered appendices, adds a heading in table of contents, and adds a
